---
config:
  theme: dark
---
classDiagram
    User <|-- Admin
    User <|-- Passager
    User : -email
    User : -password
    User : -nom_complet
    class Admin {
        -id_admin
        +ajouter_membre()
        +supprimer_membre()
        +recuperer_membre()
        +mettre_a_jour_membre()
        +ajouter_avion()
        +supprimer_avion()
        +recuperer_avion()
        +mettre_a_jour_avion()
        +ajouter_vol()
        +supprimer_vol()
        +recuperer_vol()
        +mettre_a_jour_vol()
        +ajouter_aeroport()
        +supprimer_aeroport()
        +recuperer_aeroport()
        +mettre_a_jour_aeroport()
    }
    class Passager {
        -id_passager
        -num_passeport
        -num_carte_identite
        -nationalite
        -adresse
        -telephone
        +ajouter_reservation()
        +supprimer_reservation()
        +recuperer_reservation()
        +mettre_a_jour_reservation()
    }
    class Avion {
        -id_avion
        -type_avion
        -capacite
        -annee_fab
        -model
    }
    class Vol {
        -id_vol
        -num_vol
        -vol_IATA
        -date_vol
        -aeroport_depart
        -aeroport_arrive
    }
    class Aeroport {
        -id_aeroport
        -aeroport_IATA
        -nom_aeroport
        -ville
        -pays
        -capacite
    }
    class Reservation {
        -id_reservation
        -vol_reserve
        -passager_reservant
        -date_reservation
        -status
        -prix_total
    }
    class Paiement {
        -id_paiement
    }
    class Membre_equipage {
        -nom_complet
        -fonction
        -num_licence
        -nationalite
        -option
    }
    Admin "1" -- "1..*" Avion : "associe"
    Admin "1" -- "1..*" Vol : "gere"
    Admin "1" -- "1..*" Aeroport : "gere"
    Passager "1" -- "1..*" Reservation : "faire"
    Reservation "1" -- "1" Paiement : "associee"
    Vol "1" -- "1..*" Reservation : "possede"
    Vol "1" -- "1..*" Membre_equipage : "avoir"
    Vol "1" -- "1" Aeroport : "depart"
    Vol "1" -- "1" Aeroport : "arrive a"
    Avion "1" -- "1..*" Vol : "gere"
